--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.3",
+    "express-session": "^1.17.2",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.2.7"
+    "mongoose": "^6.2.7",
+    "multer": "^1.4.4",
+    "passport": "^0.5.2",
+    "passport-kakao": "^1.0.1"
   },
   "devDependencies": {
     "jest": "^27.5.1"
